[gd_scene load_steps=7 format=3 uid="uid://dske11r146lvc"]

[ext_resource type="Script" uid="uid://di482122m8r00" path="res://scripts/options_menu.gd" id="1_ijpji"]
[ext_resource type="FontFile" uid="uid://bkw1sndk0dkgc" path="res://asset/Fonts/PressStart2P-Regular.ttf" id="1_liyum"]
[ext_resource type="Texture2D" uid="uid://chknlv7ofgkvi" path="res://asset/MainMenu/Option_bg.png" id="2_lfjc7"]
[ext_resource type="PackedScene" uid="uid://dry5hylvuosuf" path="res://scenes/fade_transition.tscn" id="4_lfjc7"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3xsyx"]
texture = ExtResource("2_lfjc7")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3xsyx"]
bg_color = Color(0, 0, 0, 0.6431373)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ijpji")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_3xsyx")
metadata/_edit_use_anchors_ = true

[node name="Panel2" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -267.0
offset_top = -170.5
offset_right = 267.0
offset_bottom = 170.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3xsyx")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -148.0
offset_right = 192.0
offset_bottom = 148.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_liyum")
theme_override_font_sizes/font_size = 32
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.05
value = 1.0

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_liyum")
theme_override_font_sizes/font_size = 32
text = "SFX Volume"

[node name="SfxSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.05
value = 1.0

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_liyum")
theme_override_font_sizes/font_size = 32
text = "Back"

[node name="FadeTransition" parent="." instance=ExtResource("4_lfjc7")]
layout_mode = 1
grow_horizontal = 1
grow_vertical = 1

[connection signal="value_changed" from="VBoxContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/SfxSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
